[gd_scene load_steps=20 format=2]

[ext_resource path="res://historia_inicial/scene7_2.gd" type="Script" id=1]
[ext_resource path="res://Assets/placa.png" type="Texture" id=2]
[ext_resource path="res://Assets/Cadeado_unlock.png" type="Texture" id=3]
[ext_resource path="res://Assets/rosto_personagem.png" type="Texture" id=4]
[ext_resource path="res://historia_inicial/Voltar.png" type="Texture" id=5]
[ext_resource path="res://historia_inicial/Continuar.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = SubResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[node name="Textbox" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 516.309, 306.455 )
scale = Vector2( 2.70444, 1.78519 )
texture = ExtResource( 2 )

[node name="cadeado" type="Sprite" parent="."]
position = Vector2( 148, 110 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="personagem" type="Sprite" parent="."]
position = Vector2( 835.537, 268.492 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.504
margin_top = -574.848
margin_right = -43.496
margin_bottom = -404.848
rect_pivot_offset = Vector2( -27.937, -38.769 )

[node name="Panel" type="Panel" parent="TextboxContainer"]
margin_right = 724.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 112.063, 41.231 )
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
margin_right = 724.0
margin_bottom = 170.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 716.0
margin_bottom = 162.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 716.0
margin_bottom = 162.0

[node name="Start" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_right = 14.0
margin_bottom = 49.0
rect_min_size = Vector2( 14, 0 )
rect_pivot_offset = Vector2( 104.063, 33.231 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "*
"

[node name="Label" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 690.0
margin_bottom = 154.0
rect_pivot_offset = Vector2( 86.063, 33.231 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Anhangá: O mapa desse jogo foi baseado em um parque real, o Parque do Povo, localizado no distrito do Itaim Bibi, em São Paulo. Durante sua jornada de exploração do mapa, você encontrará áreas bloqueadas. Para ter acesso a elas, procure por um cadeado na fronteira da névoa. Clicando nele, você precisará inserir um código para desbloquear a área, e esse código só será encontrado no Parque do Povo do mundo real."
autowrap = true
clip_text = true

[node name="End" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_left = 694.0
margin_top = 131.0
margin_right = 708.0
margin_bottom = 154.0
rect_min_size = Vector2( 14, 0 )
rect_pivot_offset = Vector2( -589.937, -57.769 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "v"

[node name="TextboxContainer2" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 66.504
margin_top = -358.848
margin_right = -357.496
margin_bottom = -293.848
rect_pivot_offset = Vector2( -157.937, -28.9127 )

[node name="Panel" type="Panel" parent="TextboxContainer2"]
margin_right = 600.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 112.063, 41.231 )
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer2"]
margin_right = 600.0
margin_bottom = 65.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="TextboxContainer2/MarginContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 592.0
margin_bottom = 57.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer2/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 592.0
margin_bottom = 57.0

[node name="Start" type="Label" parent="TextboxContainer2/MarginContainer/HBoxContainer"]
margin_right = 14.0
margin_bottom = 49.0
rect_min_size = Vector2( 14, 0 )
rect_pivot_offset = Vector2( 104.063, 33.231 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "*
"

[node name="Label" type="Label" parent="TextboxContainer2/MarginContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 566.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 86.063, 33.231 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Jogador: Então eu devo ir para o Parque do Povo real para encontrar os códigos?"
autowrap = true
clip_text = true

[node name="End" type="Label" parent="TextboxContainer2/MarginContainer/HBoxContainer"]
margin_left = 570.0
margin_top = 26.0
margin_right = 584.0
margin_bottom = 49.0
rect_min_size = Vector2( 14, 0 )
rect_pivot_offset = Vector2( -589.937, -57.769 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "v"

[node name="Tween" type="Tween" parent="."]

[node name="Button2" type="Button" parent="."]
margin_left = 31.924
margin_top = 545.992
margin_right = 404.924
margin_bottom = 685.993
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 5 )

[node name="Button" type="Button" parent="."]
margin_left = 882.148
margin_top = 545.992
margin_right = 1255.15
margin_bottom = 684.992
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
icon = ExtResource( 6 )

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
